fixes some alignment issues on MUWM-2611

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -478,9 +478,11 @@ body {
         
         .card-badge-container {
             .card_list { list-style: none; padding-left: 0; }                
-            .card-badge {  padding: 8px 10px 10px 0px; position: relative;
-
-                .card-badge-label { display: block; font-weight: bold; line-height: 35px; }
+            .card-badge {  padding: 8px 0px 10px 0px; position: relative;
+	            
+				h4.card-badge-label {margin-top:0px;}
+                .card-badge-label { display: block; font-weight: bold; line-height: 35px; 
+                }
                 .card-badge-action { display: block; font-weight: normal; line-height: 35px; margin-top: -10px; 
                     a { display: block; }
                 }
